--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -13,13 +13,10 @@ permissions:
 
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,7 +29,21 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: '.'
-      
+          exclude-paths: |
+            .git
+            .github
+            .DS_Store
+            debug.html
+            test.html
+            README.md
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
